Menu link changes

--- a/26-indien.html
+++ b/26-indien.html
@@ -113,36 +113,66 @@
                         </div>
                     </div>
                 </div>
-                <div class="header-nav">
-                    <div class="header-nav-wrapper navbar-scrolltofixed bg-white" style="z-index: 999;">
-                        <div class="container">
-                            <nav id="menuzord" class="menuzord default theme-colored menuzord-responsive"><a href="javascript:void(0)" class="showhide" style="display: none;"><em></em><em></em><em></em></a>
-                                <ul class="menuzord-menu menuzord-indented scrollable" style="max-height: 400px;">
-                                    <li class=""><a href="https://www.amsindiachapter.in/index.php">Home</a></li>
-                                    <li class=""><a href="https://www.amsindiachapter.in/about.php">About Us</a></li>
-                                    <li class=""><a href="https://www.amsindiachapter.in/anthroposophic-medicine.php">Anthroposophic  Medicine</a>
-                                    </li><li class=""><a href="https://www.amsindiachapter.in/ipmt.php">IPMT</a></li>
-                                    <li class="active"><a href="https://www.amsindiachapter.in/26-indien.php#">Events<span class="indicator"><i class="fa fa-angle-down"></i></span></a>
-                                        <ul class="dropdown" style="right: auto; display: none;">
-                                            <li><a href="https://www.amsindiachapter.in/seminar-on-neurology.php">Seminar on Neurology 2019</a></li>
-                                            <li><a href="https://www.amsindiachapter.in/iiot.php">IIOT</a></li>
-                                            <li><a href="https://www.amsindiachapter.in/25-indien.php">IPMT Brochure 2019</a></li>
-                                            <li><a href="https://www.amsindiachapter.in/autism.php">Autism</a></li>
-                                            <li><a href="https://www.amsindiachapter.in/26-indien.php">One Health Asia - Pacific Anthroposophic Conference</a></li>
-                                        </ul>
-                                    </li>
-                                    <li class=""><a href="https://www.amsindiachapter.in/faculty.php">Faculty</a></li>
-                                    <li class=""><a href="https://www.amsindiachapter.in/groups.php">Groups</a></li>
-                                    <li class=""><a href="https://www.amsindiachapter.in/gallery.php">Gallery</a></li>
-                                    <li class=""><a href="https://www.amsindiachapter.in/useful-links.php">Useful Links</a></li>
-                                    <li class=""><a href="https://www.amsindiachapter.in/contact.php">Contact Us</a></li>
-                                    <li class="scrollable-fix"></li></ul>
-                                </nav>
+            </header>
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <a class="navbar-brand d-md-none" href="#"></a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <i class="fas fa-bars"></i>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link" href="home.html">Home <span class="sr-only">(current)</span></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">About Us</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Anthroposophic  Medicine</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">IPMT</a>
+                        </li>
+                        <li class="nav-item dropdown active">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                Events
+                            </a>
+                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <a class="dropdown-item" href="#">Seminar on Neurology 2019</a>
+                                <a class="dropdown-item" href="iiot.html">IIOT</a>
+                                <a class="dropdown-item" href="#">IPMT Brochure 2019</a>
+                                <a class="dropdown-item" href="#">Autism</a>
+                                <div class="dropdown-divider"></div>
+                                <a class="dropdown-item active" href="26-indien.html">One Health Asia - Pacific Anthroposophic Conference</a>
                             </div>
-                        </div>
-                        <div></div>
-                    </div>
-                </header>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Faculty</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Groups</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="gallery.html">Gallery</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Useful Links</a>
+                        </li>
+                        <li class="nav-item disabled">
+                            <a class="nav-link disabled" href="#">Contact Us</a>
+                        </li>
+                        <li class="nav-section d-md-none">
+                            <div class="item-colored2"><a href="#">Membership to AMS</a></div>
+                            <div class="row">
+                                <div class="col-xs=6">
+                                </div>
+                                <div class="col-xs-6">
+                                </div>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
             <section>
                 <!-- <h2 class="title text-uppercase text-center">One Health Asia - Pacific Conference (Online)</h2> -->
                 <section class="inner-header divider layer-overlay overlay-dark-6" data-bg-img="images/bg/bg2.jpg" style="background-image: url(&quot;images/bg/bg2.jpg&quot;);">
