--- a/gallery.html
+++ b/gallery.html
@@ -119,47 +119,47 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" href="index.php">Home <span class="sr-only">(current)</span></a>
+                            <a class="nav-link" href="home.html">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="about-us.php">About Us</a>
+                            <a class="nav-link" href="#">About Us</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="anthroposophic-medicine.php">Anthroposophic  Medicine</a>
+                            <a class="nav-link" href="#">Anthroposophic  Medicine</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="ipmt.php">IPMT</a>
+                            <a class="nav-link" href="#">IPMT</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 Events
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <a class="dropdown-item" href="seminar-on-neurology.php">Seminar on Neurology 2019</a>
-                                <a class="dropdown-item" href="iiot.php">IIOT</a>
-                                <a class="dropdown-item" href="25-indien.php">IPMT Brochure 2019</a>
-                                <a class="dropdown-item" href="autism.php">Autism</a>
+                                <a class="dropdown-item" href="#">Seminar on Neurology 2019</a>
+                                <a class="dropdown-item" href="iiot.html">IIOT</a>
+                                <a class="dropdown-item" href="#">IPMT Brochure 2019</a>
+                                <a class="dropdown-item" href="#">Autism</a>
                                 <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="26-indien.php">One Health Asia - Pacific Anthroposophic Conference</a>
+                                <a class="dropdown-item" href="26-indien.html">One Health Asia - Pacific Anthroposophic Conference</a>
                             </div>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="faculty.php">Faculty</a>
+                            <a class="nav-link" href="#">Faculty</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="groups.php">Groups</a>
+                            <a class="nav-link" href="#">Groups</a>
                         </li>
                         <li class="nav-item active">
-                            <a class="nav-link" href="gallery.php">Gallery</a>
+                            <a class="nav-link" href="gallery.html">Gallery</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="useful-links.php">Useful Links</a>
+                            <a class="nav-link" href="#">Useful Links</a>
                         </li>
                         <li class="nav-item disabled">
-                            <a class="nav-link disabled" href="contact.php">Contact Us</a>
+                            <a class="nav-link disabled" href="#">Contact Us</a>
                         </li>
                         <li class="nav-section d-md-none">
-                            <div class="item-colored2"><a href="membership.php">Membership to AMS</a></div>
+                            <div class="item-colored2"><a href="#">Membership to AMS</a></div>
                             <div class="row">
                                 <div class="col-xs=6">
                                 </div>
