--- a/home.html
+++ b/home.html
@@ -161,10 +161,10 @@
                             <a class="nav-link" href="#">Useful Links</a>
                         </li>
                         <li class="nav-item disabled">
-                            <a class="nav-link disabled" href="contact.php">Contact Us</a>
+                            <a class="nav-link disabled" href="#">Contact Us</a>
                         </li>
                         <li class="nav-section d-md-none">
-                            <div class="item-colored2"><a href="membership.php">Membership to AMS</a></div>
+                            <div class="item-colored2"><a href="#">Membership to AMS</a></div>
                             <div class="row">
                                 <div class="col-xs=6">
                                 </div>
