Made necessary changes to head section

--- a/26-indien.html
+++ b/26-indien.html
@@ -10,40 +10,31 @@
         <meta name="keywords" content="">
         <meta name="author" content="">
         <!-- Page Title -->
+        <script src="https://kit.fontawesome.com/30c1077824.js" crossorigin="anonymous"></script>
+        <!-- Page Title -->
         <title>Welcome to AMS India</title>
+        <!-- Bootstrap -->
+        <!-- <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script> -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
         <!-- Stylesheet -->
-        <link href="./home_files/bootstrap.min.css" rel="stylesheet" type="text/css">
-        <link href="./home_files/jquery-ui.min.css" rel="stylesheet" type="text/css">
-        <link href="./home_files/animate.css" rel="stylesheet" type="text/css">
-                <link href="./home_files/css-plugin-collections.css" rel="stylesheet">
-        <!-- CSS | menuzord megamenu skins -->
-        <link href="./home_files/menuzord-megamenu.css" rel="stylesheet">
-        <link id="menuzord-menu-skins" href="./home_files/menuzord-boxed.css" rel="stylesheet">
-        <!-- CSS | Main style file -->
-        <link href="./home_files/style-main.css" rel="stylesheet" type="text/css">
-        <!-- CSS | Preloader Styles -->
-        <link href="./home_files/preloader.css" rel="stylesheet" type="text/css">
-        <!-- CSS | Custom Margin Padding Collection -->
-        <link href="./home_files/custom-bootstrap-margin-padding.css" rel="stylesheet" type="text/css">
-        <!-- CSS | Responsive media queries -->
-        <link href="./home_files/responsive.css" rel="stylesheet" type="text/css">
-        <!-- CSS | Style css. This is the file where you can place your own custom css code. Just uncomment it and use it. -->
-        <!-- <link href="css/style.css" rel="stylesheet" type="text/css"> -->
-        <!-- Revolution Slider 5.x CSS settings -->
-        <link href="./home_files/settings.css" rel="stylesheet" type="text/css">
-        <link href="./home_files/layers.css" rel="stylesheet" type="text/css">
-        <link href="./home_files/navigation.css" rel="stylesheet" type="text/css">
-        <!-- CSS | Theme Color -->
-        <link href="./home_files/theme-skin-color-set5.css" rel="stylesheet" type="text/css">
-        <!-- external javascripts -->
-        <script src="./home_files/jquery-2.2.4.min.js.download"></script>
-        <script src="./home_files/jquery-ui.min.js.download"></script>
-        <script src="./home_files/bootstrap.min.js.download"></script>
-        <!-- JS | jquery plugin collection for this theme -->
-        <script src="./home_files/jquery-plugin-collection.js.download"></script>
-        <!-- Revolution Slider 5.x SCRIPTS -->
-        <script src="./home_files/jquery.themepunch.tools.min.js.download"></script>
-        <script src="./home_files/jquery.themepunch.revolution.min.js.download"></script>
+        <link href="./files/css/jquery-ui.min.css" rel="stylesheet" type="text/css">
+        <link href="./files/css/css-plugin-collections.css" rel="stylesheet">
+        <link href="./files/css/style-main.css" rel="stylesheet" type="text/css">
+        <link href="./files/css/preloader.css" rel="stylesheet" type="text/css">
+        <link href="./files/css/responsive.css" rel="stylesheet" type="text/css">
+        <link href="./files/css/settings.css" rel="stylesheet" type="text/css">
+        <link href="./files/css/layers.css" rel="stylesheet" type="text/css">
+        <link href="./files/css/navigation.css" rel="stylesheet" type="text/css">
+        <link href="./files/css/theme-skin-color-set5.css" rel="stylesheet" type="text/css">
+        <!-- Scripts -->
+        <script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
+        <script src="./files/js/jquery-plugin-collection.js.download"></script>
+        <script src="./files/js/jquery.themepunch.tools.min.js.download"></script>
+        <script src="./files/js/jquery.themepunch.revolution.min.js.download"></script>
+        <!-- Page Style & Scripts -->
+        <link rel="stylesheet" href="./files/css/custom.css" type="text/css">
         <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
         <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
         <!--[if lt IE 9]>
