--- a/26-indien.html
+++ b/26-indien.html
@@ -166,7 +166,7 @@
             </nav>
             <section>
                 <!-- <h2 class="title text-uppercase text-center">One Health Asia - Pacific Conference (Online)</h2> -->
-                <section class="inner-header divider layer-overlay overlay-dark-6" data-bg-img="images/bg/bg2.jpg" style="background-image: url(&quot;images/bg/bg2.jpg&quot;);">
+                <section class="inner-header divider layer-overlay overlay-dark-6" data-bg-img="images/bg2.jpg" style="background-image: url('images/bg2.jpg');">
                     <div class="container pt-40 pb-40">
                         <!-- Section Content -->
                         <div class="section-content">
