Images and Footer Scripts

--- a/26-indien.html
+++ b/26-indien.html
@@ -174,11 +174,7 @@
                                 <div class="col-md-12 text-center">
                                     <h2 class="text-theme-colored2 font-36">ONE-HEALTH</h2>
                                     <h2 class="font-36">Asia - Pacific Anthroposophic Conference (Online)</h2>
-                                    <ol class="breadcrumb mt-10 white">
-                                        <li>
-                                            <h3>December 18th – 20th, 2020</h3>
-                                        </li>
-                                    </ol>
+                                    <h3>December 18th – 20th, 2020</h3>
                                     <h4>Celebrating 100 Years of Anthroposophic Medicine</h4>
                                     <div class="line-bottom-centered"></div>
                                 </div>
@@ -200,7 +196,7 @@
                     <div class="section-title mb-50">
                         <div class="row">
                             <div class="col-xs-12 col-md-3">
-                                <img src="./home_files/scan-min.jpg" class="w-100" style="height: 500px; margin-bottom: 25px;">
+                                <img src="./images/scan-min.jpg" class="w-100" style="height: 500px; margin-bottom: 25px;">
                             </div>
                             <div class="col-xs-12 col-md-6 m-auto text-justify">
                                 <p>
@@ -236,7 +232,7 @@
                                 <br>
                             </div>
                             <div class="col-xs-12 col-md-3">
-                                <img src="./home_files/poem.jpeg" class="w-100" style="height: 500px; margin-bottom: 25px;">
+                                <img src="./images/poem.jpeg" class="w-100" style="height: 500px; margin-bottom: 25px;">
                             </div>
                             <!-- BREAKPOINT -->
                             <div class="col-md-6 col-md-offset-3 text-center">
@@ -245,7 +241,7 @@
                                 <div class="line-bottom-centered"></div>
                             </div>
                             <!-- BREAKPOINT -->
-                            <img src="./home_files/apcp-final-ttt.jpg" class="w-100 mx-auto rounded shadow border" style="width: 100%; ">
+                            <img src="./images/apcp-final-ttt.jpg" class="w-100 mx-auto rounded shadow border" style="width: 100%; ">
                             <div class="col-md-12">
                                 <br>
                             </div>
@@ -267,7 +263,7 @@
                                     <div class="card mb-3" style="padding-bottom: 0px;">
                                         <div class="row no-gutters">
                                             <div class="col-md-4">
-                                                <img src="./home_files/Faculty-1.jpg" width="200" height="275" class="card-img rounded border shadow" alt="...">
+                                                <img src="./images/Faculty-1.jpg" width="200" height="275" class="card-img rounded border shadow" alt="...">
                                             </div>
                                             <div class="col-md-8">
                                                 <div class="card-body">
@@ -280,7 +276,7 @@
                                     <div class="card mb-3" style="padding-bottom: 0px;">
                                         <div class="row no-gutters">
                                             <div class="col-md-4">
-                                                <img src="./home_files/Faculty-2.jpg" width="200" height="275" class="card-img rounded border shadow" alt="...">
+                                                <img src="./images/Faculty-2.jpg" width="200" height="275" class="card-img rounded border shadow" alt="...">
                                             </div>
                                             <div class="col-md-8">
                                                 <div class="card-body">
@@ -293,7 +289,7 @@
                                     <div class="card mb-3" style="padding-bottom: 0px;">
                                         <div class="row no-gutters">
                                             <div class="col-md-4">
-                                                <img src="./home_files/faculty-3.jpg" width="200" height="275" class="card-img rounded border shadow" alt="...">
+                                                <img src="./images/faculty-3.jpg" width="200" height="275" class="card-img rounded border shadow" alt="...">
                                             </div>
                                             <div class="col-md-8">
                                                 <div class="card-body">
@@ -306,7 +302,7 @@
                                     <div class="card mb-3" style="padding-bottom: 0px;">
                                         <div class="row no-gutters">
                                             <div class="col-md-4">
-                                                <img src="./home_files/faculty-4.jpg" width="200" height="275" class="card-img rounded border shadow" alt="...">
+                                                <img src="./images/faculty-4.jpg" width="200" height="275" class="card-img rounded border shadow" alt="...">
                                             </div>
                                             <div class="col-md-8">
                                                 <div class="card-body">
@@ -319,7 +315,7 @@
                                     <div class="card mb-3" style="padding-bottom: 0px;">
                                         <div class="row no-gutters">
                                             <div class="col-md-4">
-                                                <img src="./home_files/faculty-10.jpg" width="200" height="275" class="card-img rounded border shadow" alt="...">
+                                                <img src="./images/faculty-10.jpg" width="200" height="275" class="card-img rounded border shadow" alt="...">
                                             </div>
                                             <div class="col-md-8">
                                                 <div class="card-body">
@@ -332,7 +328,7 @@
                                     <div class="card mb-3" style="padding-bottom: 0px;">
                                         <div class="row no-gutters">
                                             <div class="col-md-4">
-                                                <img src="./home_files/faculty-5.jpg" width="200" height="275" class="card-img rounded border shadow" alt="...">
+                                                <img src="./images/faculty-5.jpg" width="200" height="275" class="card-img rounded border shadow" alt="...">
                                             </div>
                                             <div class="col-md-8">
                                                 <div class="card-body">
@@ -345,7 +341,7 @@
                                     <div class="card mb-3" style="padding-bottom: 0px;">
                                         <div class="row no-gutters">
                                             <div class="col-md-4">
-                                                <img src="./home_files/faculty-6.jpg" width="200" height="275" class="card-img rounded border shadow" alt="...">
+                                                <img src="./images/faculty-6.jpg" width="200" height="275" class="card-img rounded border shadow" alt="...">
                                             </div>
                                             <div class="col-md-8">
                                                 <div class="card-body">
@@ -358,7 +354,7 @@
                                     <div class="card mb-3" style="padding-bottom: 0px;">
                                         <div class="row no-gutters">
                                             <div class="col-md-4">
-                                                <img src="./home_files/faculty-7.jpg" width="200" height="275" class="card-img rounded border shadow" alt="...">
+                                                <img src="./images/faculty-7.jpg" width="200" height="275" class="card-img rounded border shadow" alt="...">
                                             </div>
                                             <div class="col-md-8">
                                                 <div class="card-body">
@@ -371,7 +367,7 @@
                                     <div class="card mb-3" style="padding-bottom: 0px;">
                                         <div class="row no-gutters">
                                             <div class="col-md-4">
-                                                <img src="./home_files/faculty-8.jpg" width="200" height="275" class="card-img rounded border shadow" alt="...">
+                                                <img src="./images/faculty-8.jpg" width="200" height="275" class="card-img rounded border shadow" alt="...">
                                             </div>
                                             <div class="col-md-8">
                                                 <div class="card-body">
@@ -384,7 +380,7 @@
                                     <div class="card mb-3" style="padding-bottom: 0px;">
                                         <div class="row no-gutters">
                                             <div class="col-md-4">
-                                                <img src="./home_files/faculty-9.jpg" width="200" height="275" class="card-img rounded border shadow" alt="...">
+                                                <img src="./images/faculty-9.jpg" width="200" height="275" class="card-img rounded border shadow" alt="...">
                                             </div>
                                             <div class="col-md-8">
                                                 <div class="card-body">
@@ -457,19 +453,5 @@
         <!-- Footer Scripts -->
         <!-- JS | Chart-->
         <script src="./home_files/chart.js.download"></script>
-        <!-- JS | Custom script for all pages -->
-        <script src="./home_files/custom.js.download"></script>
-        <!-- SLIDER REVOLUTION 5.0 EXTENSIONS
-        (Load Extensions only on Local File Systems !
-        The following part can be removed on Server for On Demand Loading) -->
-        <script type="text/javascript" src="./home_files/revolution.extension.actions.min.js.download"></script>
-        <script type="text/javascript" src="./home_files/revolution.extension.carousel.min.js.download"></script>
-        <script type="text/javascript" src="./home_files/revolution.extension.kenburn.min.js.download"></script>
-        <script type="text/javascript" src="./home_files/revolution.extension.layeranimation.min.js.download"></script>
-        <script type="text/javascript" src="./home_files/revolution.extension.migration.min.js.download"></script>
-        <script type="text/javascript" src="./home_files/revolution.extension.navigation.min.js.download"></script>
-        <script type="text/javascript" src="./home_files/revolution.extension.parallax.min.js.download"></script>
-        <script type="text/javascript" src="./home_files/revolution.extension.slideanims.min.js.download"></script>
-        <script type="text/javascript" src="./home_files/revolution.extension.video.min.js.download"></script>
     </body>
 </html>
